<resources>
    <string name="app_name">MultiGame</string>
    <string name="actionbar_game_name">MultiGame</string>
    <string name="todo">TODO</string>

    <!-- For Navigation Menu (Left) -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Player Game</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="game1_name">Tictactoe</string>
    <string name="game2_name">Sudoku</string>
    <string name="game3_name">Memory</string>
    <string name="game4_name">Trivia</string>
    <string name="game5_name">Game 5</string>
    <string name="menu_top_players">Top players</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>

    <!-- For Function Menu (Right) -->
    <string name="menu_information">Information</string>
    <string name="instructions">Instructions</string>

    <!-- For Tictactoe Game -->
    <string name="title_activity_tictactoe_game">Tictactoe</string>
    <string name="pick_mark">PICK PLAYER 1\'S MARK</string>
    <string name="remember">REMEMBER: X GOES FIRST</string>
    <string name="single_player_button_txt">SINGLE PLAYER( vs BOT)</string>
    <string name="duo_player_button_txt">MULTIPLE PLAYER</string>
    <string name="turn">TURN</string>
    <string name="x_score">\'X\'s SCORE</string>
    <string name="o_score">\'O\'s SCORE</string>
    <string name="tie_score">TIES</string>
    <string name="you_win">YOU WIN!</string>
    <string name="you_lose">YOU LOSE!</string>
    <string name="x_win">\'X\' is WIN!</string>
    <string name="o_win">\'O\' is WIN!</string>
    <!-- Right Menu -->
    <string name="instruction_tictactoe">
        1. The game is played on a grid that\'s 3 squares by 3 squares.\n\n
        2. You are X , your friend (or the computer in this case) is O . Players take turns putting their marks in empty squares.\n\n
        3. The first player to get 3 of her marks in a row (up, down, across, or diagonally) is the winner.\n\n
        4. When all 9 squares are full, the game is over. If no player has 3 marks in a row, the game ends in a tie.\n\n
        5. For Multiplayer, no matter player chooses X or O, X always goes first.
    </string>

    <!-- Memory Game -->
    <string name="title_activity_memory_game">Memory Game</string>
    <string name="memory_game_new_game">New game</string>
    <string name="memory_game_welcome_text">Welcome to Memory Game!</string>
    <string name="memory_game_play">Play Game</string>
    <!-- Right Menu -->
    <string name="instructions_game_memory">
        1. Choose Two cards to flip over, if the images are the same check it as correct. \n\n
        2. If the images are not the same, they will flip back over.\n\n
        3. You must correctly choose the correct images within a certain amount of turns.\n\n
        4. The timer will record how fast the player has been played.
    </string>

    <!-- Sudoku Game -->
    <string name="sudoku_game_title">Sudoku</string>
    <string name="sudoku_game_select_difficulty">Select Your Difficulty</string>
    <string name="sudoku_game_difficulty_easy">Easy</string>
    <string name="sudoku_game_difficulty_normal">Normal</string>
    <string name="sudoku_game_difficulty_hard">Hard</string>
    <string name="sudoku_game_start_game">Start Game</string>
    <string name="sudoku_game_check_board">Check board</string>
    <string name="board_correct">CORRECT</string>
    <string name="board_incorrect">INCORRECT</string>
    <string name="start_piece_error">Can not change start piece</string>
    <string name="choose_a_number">Choose number to place:</string>
    <string name="choose_number">Choose number</string>
    <string name="piece_unsure">Mark piece as unsure</string>
    <string name="remove_piece">Remove piece</string>
    <!-- Right Menu -->
    <string name="instructions_game_sudoku">
        1. In Sudoku it is intended to place all the remaining pieces on the board. The numbers range from 1 to 9 (in 9x9 Sudoku).\n\n
        2. The board is separated into several squares, and inside each of them it is only allowed to place one of each number.\n\n
        3. It is only allowed to place one of each number at each row, both horizontal and vertical.
    </string>

    <!-- Trivia Game -->
    <string name="trivia_game_title">Trivia</string>
    <string name="title_activity_trivia_game">Trivia Game</string>
    <string name="trivia_game_new_game">New game</string>
    <string name="trivia_game_welcome_text">Welcome to Trivia Game!</string>
    <string name="trivia_game_play">Let\'s Get Start</string>
    <string name="trivia_select_category">Select Your Category</string>
    <string name="trivia_category_one">category 1</string>
    <string name="trivia_category_two">category 2</string>
    <string name="trivia_category_three">category 3</string>
    <string name="trivia_category_four">category 4</string>
    <!-- Right Menu -->
    <string name="instructions_game_trivia">
        1. Choose the categories you want to play.\n\n
        2. Each categories have 10 questions.\n\n
        3. You need to answer them in 30 second.
    </string>

    <!-- Alert -->
    <string name="alert_win">You win!\nTime to win this game is %d seconds.</string>
    <string name="alert_correct_sudoku">Correct!\nTime to solve the puzzle is %d seconds.</string>
    <string name="alert_incorrect_sudoku">Incorrect! Please try again.</string>
</resources>